Account-wide date format preference, applied everywhere dates are shown
